--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanban-app",
+  "name": "kanban",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,9 +11,10 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/react-redux": "^7.1.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "sass": "^1.62.1",
@@ -45,6 +46,6 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^12.11.0"
+    "cypress": "^12.10.0"
   }
 }
