--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.2.1",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
